fixed BigFloat.doubleValue()